fixed logo size on mobile breakpoint

--- a/style/index.css
+++ b/style/index.css
@@ -460,11 +460,13 @@ footer nav a{
     }
 }
 @media(max-width:300px){
+    
     .nav{
         display: flex;
         justify-content: center;
         margin: 2% 0;
        flex-direction: column;
+       align-items: center;
     }
     .box{
         width: 100%;
@@ -492,5 +494,8 @@ footer nav a{
         align-items: center;
         padding: 2%;
         margin: 2%;
+    }
+    .logo{
+        width: 80%;
     }
 }
